--- a/resthere-frontend/src/css/Home.css
+++ b/resthere-frontend/src/css/Home.css
@@ -1,14 +1,29 @@
 /* src/components/Home.css */
 .home-container {
     background-image: url('../assets/Home_Illustration.png');  
-    background-size: cover; 
+    background-size: contain; 
     background-position: center;  
     height: 100vh;  
     width: 100vw;   
     display: flex;
     flex-direction: column;
-    
+    margin-top: -8vh;
     align-items: center;
     text-align: center;
   }
   
+
+  .home-title{
+    margin-top: 15vh !important;
+  }
+
+  .title-1, .title-2{
+    font-family: "Montserrat Alternates", system-ui;
+    font-weight: 300;
+  }
+
+  .rest-here{
+    color: #A9C4A0 !important;
+    font-family: "Playwrite US Trad", system-ui !important;
+    font-optical-sizing: auto;
+  }
