add backgrounds and titles
add background illustrations and titles to other pages

--- a/resthere-frontend/src/css/Home.css
+++ b/resthere-frontend/src/css/Home.css
@@ -1,4 +1,4 @@
-/* src/components/Home.css */
+/* src/css/Home.css */
 .home-container {
     background-image: url('../assets/Home_Illustration.png');  
     background-size: contain; 
