--- a/resthere-frontend/src/css/Journal.css
+++ b/resthere-frontend/src/css/Journal.css
@@ -1,14 +1,15 @@
 /* src/css/Journaling.css */
 .journal-container {
-    background-image: url('../assets/Page_BG.png');  
-    background-size: contain; 
-    background-position: center;  
-    height: 99vh;  
-    width: 98.9vw;   
-    display: flex;
-    flex-direction: column;
-    margin-top: -8vh;
-    align-items: center;
-    text-align: center;
-  }
-  
+  background-image: url('../assets/Page_BG.png');  
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-attachment: fixed; /* Keeps the background image fixed while scrolling */
+  min-height: 100vh; /* Ensure it covers full height of the viewport */
+  width: 98.9vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 50px; /* Ensure space at the bottom for content */
+}
