--- a/resthere-frontend/src/css/Journal.css
+++ b/resthere-frontend/src/css/Journal.css
@@ -8,6 +8,7 @@
   min-height: 100vh; /* Ensure it covers full height of the viewport */
   width: 98.9vw;
   display: flex;
+  margin-top: -8vh;
   flex-direction: column;
   align-items: center;
   text-align: center;
