add profile page and fix state
add a profile page with static data and logout button and fix implementation of logged in state for nav bar

--- a/resthere-frontend/src/css/NavigationBar.css
+++ b/resthere-frontend/src/css/NavigationBar.css
@@ -51,3 +51,10 @@
     color: #000000 !important;
     
 }
+
+/* secondary button styles */
+.btn-secondary{
+    background-color: #A9C4A0 !important;
+    border: none !important;
+    border-radius: 50px !important;
+}
