--- a/resthere-frontend/src/css/settingsProfile.css
+++ b/resthere-frontend/src/css/settingsProfile.css
@@ -46,3 +46,15 @@
     font-weight: 300;
   }
   
+
+  .title-button-col{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .new-post-button{
+    font-size: 16px !important;
+    height: 50%;
+    margin-top: 5vh !important;
+  }
+
