--- a/resthere-frontend/src/css/Posts.css
+++ b/resthere-frontend/src/css/Posts.css
@@ -42,6 +42,14 @@
     color: #000000 !important;
     border-radius: 25px !important;
     border: 1px solid #A9C4A0 !important;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .form-tag-btn-group{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
   }
 
   .form-post-content , .form-post-content:focus{
