--- a/resthere-frontend/src/css/Journal.css
+++ b/resthere-frontend/src/css/Journal.css
@@ -39,6 +39,7 @@
   padding: 10px;
   background-color: #A9C4A0 !important;
   border-radius: 25px;
+  margin-bottom: 2vh;
 }
 
 .fc-event-today{
@@ -70,3 +71,13 @@
   font-weight: 300 !important;
   color: black !important;
 }
+
+.fc-event-start{
+  background-color: #A9C4A0 !important;
+  border: none !important;
+}
+
+.fc-event-start:hover{
+  cursor: pointer;
+}
+
