--- a/resthere-frontend/src/css/NavigationBar.css
+++ b/resthere-frontend/src/css/NavigationBar.css
@@ -58,3 +58,21 @@
     border: none !important;
     border-radius: 50px !important;
 }
+.navbar-links .nav-link.active {
+    position: relative;
+    font-weight: 600;
+    color: #A9C4A0 !important;
+}
+
+.navbar-links .nav-link.active::before {
+    content: '';
+    position: absolute;
+    bottom: -6px; /* Position the "border" slightly below the text */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%; 
+    height: 4px; /* Thickness of the "border" */
+    background-color: #A9C4A0; 
+    border-radius: 10px; /* Makes the caps rounded */
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+}
