add active states to filter pills
add active state to show which filter user has applied

--- a/resthere-frontend/src/css/Resources.css
+++ b/resthere-frontend/src/css/Resources.css
@@ -67,3 +67,8 @@
 .chat-expand-arrow:hover{
     cursor: pointer;
 }
+
+.filter-pill.active {
+    background-color: #A9C4A0 !important; 
+    color: white !important; 
+  }
