--- a/resthere-frontend/src/css/Chat.css
+++ b/resthere-frontend/src/css/Chat.css
@@ -69,3 +69,24 @@
     display: flex !important; 
     justify-content: center;
   }
+
+  .message-bubble {
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 15px;
+    max-width: 60%;
+}
+
+.user-message {
+    background-color: #d1e7dd; 
+    align-self: flex-end;
+    margin-left: auto; 
+    text-align: right;
+}
+
+.professional-message {
+    background-color: #f8d7da; 
+    align-self: flex-start;
+    margin-right: auto; 
+    text-align: left;
+}
