--- a/resthere-frontend/src/css/Resources.css
+++ b/resthere-frontend/src/css/Resources.css
@@ -72,3 +72,53 @@
     background-color: #A9C4A0 !important; 
     color: white !important; 
   }
+
+
+
+  /* ==================================================================== */
+/* responsiveness */
+@media (max-width: 768px) { /* Tablets and smaller */
+    .filter-sort-row {
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    .filter-pill-con {
+        width: 45%; 
+        margin-bottom: 10px; 
+    }
+
+    .filter-pill {
+        padding: 8px 12px !important; 
+    }
+
+    .search-bar-con {
+        width: 60% !important;
+        margin-left: 20%; 
+    }
+    .sort-dropdown-col {
+        width: 40% !important;
+        justify-content: center;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 576px) { /* Mobile screens */
+    .filter-pill-con {
+        width: 100%; 
+    }
+
+    .filter-pill {
+        font-size: 14px; 
+        padding: 6px 8px !important;
+    }
+
+    .search-bar-con {
+        width: 80% !important; 
+        margin-left: 10%;
+    }
+    .sort-dropdown-col {
+        width: 80% !important;
+        margin: 10px auto; 
+    }
+}
