update how singlePage works
replace single resource page with opening link from resource card

--- a/resthere-frontend/src/css/Resources.css
+++ b/resthere-frontend/src/css/Resources.css
@@ -88,6 +88,9 @@
     margin-left: 10%;
 }
 
+
+/* single resource page */
+
   /* ==================================================================== */
 /* responsiveness */
 @media (max-width: 768px) { /* Tablets and smaller */
